# Code-VS-2012

./: .gitignore  codevs_2012_client_preopen_public.jnlp  codevs_2012_client_public.jnlp  codevs_2012_demo_public.jnlp
CodeVs1/: CodeVs1.cabal
CodeVs1/src/: Main.hs
save-input/: save-input.rb
